# newsletter

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  config.py  main.py  pyproject.toml
daily/: 2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-04-01.md  2026-04-02.md  2026-04-03.md
docs/: task.md  tech-design.md
fetchers/: github_trending.py  hn.py
renderers/: markdown.py
skills/: install.sh
skills/newsletter-cli/: SKILL.md
skills/newsletter-cli/scripts/: run.sh  show_digest.sh
src/newsletter/: cli.py  digest.py  logging_config.py
src/newsletter/fetchers/: github_trending.py  hn.py
src/newsletter/renderers/: __init__.py  markdown.py
src/newsletter/storage/: __init__.py  writer.py
tests/: test_main.py
